--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,8 @@
 		"matches": ["https://www.10bis.co.il/Restaurants/Menu/*"] 
 	}],
 	"page_action":{
-		"default_icon" : "icon.png"
+		"default_icon" : "icon.png",
+		"default_title" : "10bis Price After Discount"
 	},
 	"icons": { "128" : "icon.png"}
 }
