--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
 	"manifest_version": 2,
 	"name": "10bis price after discount",
 	"description": "This extension displays the prices after discount in 10bis menu page",
-	"version": "0.3.2",
+	"version": "0.3.3",
 	"background": {
 		"persistent": false,
 		"scripts": ["background.js"]
@@ -15,8 +15,7 @@
 		{
 			"css": ["styles.css"],
 			"js": ["10bisExtension-next.js"],
-            "run_at":  "document_idle",
-			"matches": ["https://www.10bis.co.il/next/Restaurants/Menu/*"]
+			"matches": ["https://www.10bis.co.il/next/*"]
 		}],
 	"page_action":{
 		"default_icon" : "icon.png",
